--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <button id="btn1">Play</button>
+    <br/>
+    <canvas id="canvas" width="1000" height="300" style="border: 1px solid black" /> 
     <script type="text/javascript" src="./index.js"></script>
-</body>
+  </body>
 </html>
