--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <button id="btn1">Play</button>
-    <br/>
-    <canvas id="canvas" width="1000" height="300" style="border: 1px solid black" /> 
+    <audio id="audio" controls><source src="rat.mp3" type="audio/ogg" /></audio> 
+    <button id="btn" type="button">Play</button> <br />
+    <canvas id="canvas" width="1000" height="300" style="border: 1px solid black" />
     <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
