--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Canvas Audio Player</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
   <body>
-    <audio id="audio" controls><source src="rat.mp3" type="audio/ogg" /></audio> 
-    <button id="btn" type="button">Play</button> <br />
-    <canvas id="canvas" width="1000" height="300" style="border: 1px solid black" />
+    <audio id="audio"><source src="rat.mp3" type="audio/ogg" /></audio>
+    <canvas id="canvas" width="1000" height="300" style="border: 4px solid skyblue"></canvas>
+    <button id="btn" type="button"><i class=""></i></button> <br /> 
     <script type="text/javascript" src="./index.js"></script>
   </body>
 </html>
