--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
   <body>
-    <audio id="audio"><source src="rat.mp3" type="audio/ogg" /></audio>
-    <canvas id="canvas" width="1000" height="300" style="border: 4px solid skyblue"></canvas>
+    <h2>MP3 Audio Player (Canvas)</h2>
+    <audio id="audio"><source src="rat.mp3" type="audio/mp3" /></audio>
+    <canvas id="canvas" width="1000" height="300" style="border: 4px solid rgb(97, 7, 7)"></canvas>
     <button id="btn" type="button"><i class=""></i></button> <br /> 
     <script type="text/javascript" src="./index.js"></script>
   </body>
